[tool.poetry]
name = "lsd"
version = "0.1.0"
description = ""
authors = ["Dustin Michels <dustin7538@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
